# HX-Git-DB

./: .gitignore  README.md  log.txt  pyproject.toml
.github/workflows/: demo-normal.yml  demo-only.yml  publish.yml
examples/: example.py
src/hx_git_db/: __init__.py  commit_msg.py  data_file.py  database.py
