[project]
name = "hx-git-db"
version = "0.1.0"
description = "将 Git 仓库作为轻量级数据库，支持 RAII 风格的文件读写与自动同步"
requires-python = ">=3.12"
license = "MIT"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/HengXin666/HX-Git-DB"
Repository = "https://github.com/HengXin666/HX-Git-DB"
Issues = "https://github.com/HengXin666/HX-Git-DB/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hx_git_db"]
